--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 	</head>
 	<body>
 		<div class="container">
+			<div class="progress-bar">
+				<span>2 / 20</span>
+			</div>
 			<h3 class="text-center">Выбери экспонат и начинай игру!</h3>
 			<div class="row">
 				<div class="col-12 text-left mb-4">
