--- a/flappy/index.html
+++ b/flappy/index.html
@@ -7,9 +7,31 @@
     <title>FlappyBird</title>
     <link rel="stylesheet" href="style.css" > 
     <link href="https://fonts.googleapis.com/css?family=Squada+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
+	<div class="container" style="background-color: inherit;">
+		<div class="progress-bar"></div>
+		<p class="progress-points">0 / 12</p>
+		<h6 class="text-center">Наберите 2 очка, чтобы получить балл!</h6>
+	</div>
     <canvas id="canvas" width="276" height="414"></canvas>
+    <div class="modal-overlay d-none">
+    	<div class="modal-window">
+    		<div class="modal-head">
+    			<span id="close-modal">&times;</span>
+    		</div>
+    		<div class="modal-body">
+    			<h6 class="modal-title">
+    				Поздравляем! Вы справились с заданием!
+    			</h6>
+    			<p class="modal-desc"></p>
+    			<button class="mm-btn w-100" id="close-game">Закрыть игру</button>
+    		</div>
+    	</div>
+    </div>
     <script src="game.js"></script>
+    <script src="../assets/js/main.js"></script>
 </body>
 </html>
