Игра с картинками, дашборд, регистрация

--- a/pazl.html
+++ b/pazl.html
@@ -49,7 +49,7 @@
 	</div>
 </div>
 <script type="text/javascript" src="assets/js/main.js"></script>
-<script type="text/javascript" src="pazl/snapfit.js"></script>
+<script type="text/javascript" src="assets/js/snapfit.js"></script>
 <script>
 	const startBtn = document.querySelector("#start-game")
 	const shuffleBtn = document.querySelector("#shuffle-pazl")
@@ -121,9 +121,7 @@
 								CIRRUS 2, 2012 <br><br>
 								Данная скульптура за авторством известного скульптора Морозова, директора Московского академического художественного училища и члена-корреспондента Российской Академии Художеств, демонстрирует развитие шеринговой культуры — культуры делиться. Именно тренд на разделение услуг между многим количеством людей обеспечивает экологичное развитие городской среды в целом и транспортной системы в частности.`
 	}
-	else {
-		window.location.href = window.location.protocol + "//" + window.location.host + "/pazl.html?vid=6"
-	}
+
 
 
 	function startTimer() {
