Доработка главной как дашборда, рисовалка; конец разработки

--- a/dashboard.html
+++ b/dashboard.html
@@ -21,7 +21,12 @@
 			<div class="progress-bar mt-0"></div>
 			<p class="progress-points">0 / 12</p>
 			<h3 class="text-center mb-5">ТОП игроков Музея Транспорта Москвы за сегодня</h3>
-			<h5 class="text-center mb-5">Продолжайте играть, чтобы стать первым!</h5>
+			<h5 class="text-center mb-5">Начните или продолжайте играть, чтобы стать первым!</h5>
+			<h5 class="text-center mb-5">
+				QR коды со ссылками на мини-игры находятся около экспонатов. Всего 12 игр: викторины, паззлы, Flappy Bird и Запоминание картинок.
+				<br>Наберите 10 очков и получите приз! Удачи!
+			</h5>
+			<h5 class="text-center"><a href="https://nnakleskin.github.io/go-code-hack/quiz.html?vid=1">Переходите к первой мини-игре прямо сейчас!</a></h5>
 			<div class="dashboard-holder"></div>
 		</div>
 	<script src="assets/js/main.js"></script>
