--- a/pazl.html
+++ b/pazl.html
@@ -76,6 +76,10 @@
 
 	let testId = getParams()
 
+	if(isNaN(testId)){
+		window.location.href = "https://nnakleskin.github.io/go-code-hack/pazl.html?vid=6"
+	}
+
 
 	if (testId === 6){
 		imgHolder.setAttribute("src", "assets/img/pazzels/6.jpg")
