--- a/flappy/index.html
+++ b/flappy/index.html
@@ -14,7 +14,7 @@
 	<div class="container" style="background-color: inherit;">
 		<div class="progress-bar"></div>
 		<p class="progress-points">0 / 12</p>
-		<h6 class="text-center">Наберите 2 очка, чтобы получить балл!</h6>
+		<h6 class="text-center">Наберите 15 очков, чтобы получить балл!</h6>
 	</div>
     <canvas id="canvas" width="276" height="414"></canvas>
     <div class="modal-overlay d-none">
